# mathfun

./: CMakeLists.txt  Doxyfile.in  mathfun.pc.in
examples/: CMakeLists.txt  dump.c  eval.c  evaltree.c  livewave.c  portable_endian.h  wavegen.c
src/: CMakeLists.txt  bindings.c  codegen.c  codegen.h  codegen_jit.c  codegen_jit.h  config.h.in  error.c  exec.c  mathfun.c  mathfun.h  mathfun_intern.h  optimize.c  parser.c
test/: CMakeLists.txt  test_mathfun.c
